--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev:turbo": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "typecheck": "tsc --noEmit",
+    "test": "npm run lint && npm run typecheck && npm run build"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.98.0",
+    "@upstash/redis": "^1.36.2",
     "googleapis": "^171.4.0",
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
